2021-02-08  Youenn Fablet  <youenn@apple.com>

        [MacOS] Enable Audio Capture in GPUProcess by default
        https://bugs.webkit.org/show_bug.cgi?id=221400

        Reviewed by Eric Carlson.

        * TestWebKitAPI/Tests/WebKit/GetUserMediaReprompt.mm:
        (-[GetUserMediaRepromptTestView haveStream:]):
        Increase timeout since capture might require spinning GPUProcess.

2021-02-08  Youenn Fablet  <youenn@apple.com>

        NetworkRTCSocketCocoa extractDataMessages should not read too much data
        https://bugs.webkit.org/show_bug.cgi?id=221544

        Reviewed by Eric Carlson.

        * TestWebKitAPI/Tests/WebCore/STUNMessageParsingTest.cpp: Added.
        (TestWebKitAPI::TEST):
        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:

2021-02-08  Alicia Boya García  <aboya@igalia.com>

        Add ConsoleMessage::toString()
        https://bugs.webkit.org/show_bug.cgi?id=221539

        Reviewed by Eric Carlson.

        Added unit tests.

        * TestWebKitAPI/Tests/JavaScriptCore/InspectorConsoleMessage.cpp:
        (TestWebKitAPI::TEST):

2021-02-08  Sam Weinig  <weinig@apple.com>

        Update sRGB <-> XYZ conversion matrix values to match values in latest spec
        https://bugs.webkit.org/show_bug.cgi?id=221533

        Reviewed by Alex Christensen.

        * TestWebKitAPI/Tests/WebCore/ExtendedColorTests.cpp:
        (TestWebKitAPI::TEST):
        Update values to values in P3 <-> sRGB conversion test and update to
        use EXPECT_FLOAT_EQ so the values can be seen in the output when thigs
        fail.

2021-02-08  Lauro Moura  <lmoura@igalia.com>

        [GLIB] Gardening geolocation API test flakiness

        Unreviewed test gardening.

        Failing regularly, likely due to the same geolocation API limitation.

        * TestWebKitAPI/glib/TestExpectations.json:

2021-02-08  Andres Gonzalez  <andresg_22@apple.com>

        Add support for aria-sort change notifications.